2007-09-22  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_as_classes/as_mcloader.cpp
		* gameswf/gameswf_root.cpp
		* gameswf/gameswf_root.h
		A bit cleanup
		
2007-09-22  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf.h
		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_function.cpp
		* gameswf/gameswf_sprite.h
		Fixed ASSetPropFlags,
		as_as_function should use the environment of 'this_ptr' if it is

2007-09-21  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_dlist.cpp
		* gameswf/gameswf_dlist.h
		* gameswf/gameswf_sprite.cpp
		* gameswf/gameswf_sprite.h
		added dump() stuff for debugging

2007-09-21  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf.h
		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_action.h
		* gameswf/gameswf_as_classes/as_mcloader.cpp
		* gameswf/gameswf_as_classes/as_netstream.cpp
		* gameswf/gameswf_as_classes/as_xmlsocket.cpp
		* gameswf/gameswf_environment.cpp
		* gameswf/gameswf_function.cpp
		* gameswf/gameswf_function.h
		* gameswf/gameswf_impl.cpp
		* gameswf/gameswf_object.cpp
		* gameswf/gameswf_test_ogl.cpp
		* gameswf/gameswf_timers.cpp
		Pointer to as_environment is removed from struct as_as_function(),
		as_as_function should not be binded with the execution environment constantly.
		Flash places user-defined classes into _global and they can be called for
		different environments. For the same reason struct action_buffer() instead of
		references to dict & opcodes buffers hould contain data:
		action_buffer* ==> action_buffer,
		array<const char*> m_dictionary ==>array<tu_string> m_dictionary

2007-09-21  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_as_classes/as_broadcaster.*
		applied weak_ptr, listener maybe is deleted

2007-09-18  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_environment.cpp: target maybe NULL

2007-09-18  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_movie_def.cpp
		* gameswf/gameswf_movie_def.h